SVM fast fertig

--- a/Abkuerzungsverzeichnis.tex
+++ b/Abkuerzungsverzeichnis.tex
@@ -6,3 +6,4 @@
 \nomenclature{USB}{Universal Serial Bus}
 \nomenclature{VHDL}{Very High Speed Integrated Circuit Description Language}
 \nomenclature{HOG}{Histogram of Oriented Gradients}
+\nomenclature{SVM}{Support Vector Machine}
