--- a/bib.bib
+++ b/bib.bib
@@ -17,6 +17,15 @@
   HAL_VERSION = {v1},
 }
 
+@book{cristianini2000introduction,
+  title={An Introduction to Support Vector Machines and Other Kernel-based Learning Methods},
+  author={Cristianini, N. and Shawe-Taylor, J.},
+  isbn={9780521780193},
+  lccn={99054716},
+  url={https://books.google.de/books?id=B-Y88GdO1yYC},
+  year={2000},
+  publisher={Cambridge University Press}
+}
 
 
 
